APB-10575 cleanup in views
Signed-off-by: pav <173694350+paweldigital@users.noreply.github.com>

--- a/app/uk/gov/hmrc/agentregistrationfrontend/views/Layout.scala.html
+++ b/app/uk/gov/hmrc/agentregistrationfrontend/views/Layout.scala.html
@@ -38,8 +38,11 @@
         maybeForm: Option[Form[?]] = None,
         suppressBackLink: Boolean = false,
         templateScripts: Option[Html] = None,
-        templateStyles: Option[Html] = None
-)(contentBlock: Html)(implicit request: RequestHeader, messages: Messages)
+        templateStyles: Option[Html] = None)(
+        contentBlock: Html)(implicit
+        request: RequestHeader,
+        messages: Messages
+)
 
 @head = {
     @if(isSignedIn) {
