--- a/app/uk/gov/hmrc/agentregistrationfrontend/views/SimplePage.scala.html
+++ b/app/uk/gov/hmrc/agentregistrationfrontend/views/SimplePage.scala.html
@@ -18,8 +18,7 @@
 
 @(
         h1: String,
-        bodyText: Option[String]
-)(implicit
+        bodyText: Option[String])(implicit
         request: RequestHeader,
         messages: Messages
 )
