--- a/app/uk/gov/hmrc/agentregistrationfrontend/views/apply/aboutyourbusiness/AgentTypePage.scala.html
+++ b/app/uk/gov/hmrc/agentregistrationfrontend/views/apply/aboutyourbusiness/AgentTypePage.scala.html
@@ -26,7 +26,11 @@
         govukButton: GovukButton
 )
 
-@(form: Form[AgentType])(implicit request: Request[?], messages: Messages)
+@(
+        form: Form[AgentType])(implicit
+        request: RequestHeader,
+        messages: Messages
+)
 
 @key = @{
     AgentTypeForm.key
