--- a/app/uk/gov/hmrc/agentregistrationfrontend/views/apply/aboutyourbusiness/AnswerSummary.scala.html
+++ b/app/uk/gov/hmrc/agentregistrationfrontend/views/apply/aboutyourbusiness/AnswerSummary.scala.html
@@ -23,8 +23,9 @@
 @(
         key: String,
         answers: BusinessDetailsLlp,
-        canChange: Boolean = true
-)(implicit messages: Messages)
+        canChange: Boolean = true)(implicit
+        messages: Messages
+)
 
 @agentTypeRow = @{
   SummaryListRow(
