--- a/app/uk/gov/hmrc/agentregistrationfrontend/views/apply/aboutyourbusiness/SignInWithAgentDetailsPage.scala.html
+++ b/app/uk/gov/hmrc/agentregistrationfrontend/views/apply/aboutyourbusiness/SignInWithAgentDetailsPage.scala.html
@@ -23,7 +23,11 @@
     govukButton: GovukButton
 )
 
-@(signInLink: Uri)(implicit request: Request[?], messages: Messages)
+@(
+        signInLink: Uri)(implicit
+        request: RequestHeader,
+        messages: Messages
+)
 
 @key = @{"signInWithAgentDetails"}
 @title = @{messages(s"$key.title")}
