--- a/app/uk/gov/hmrc/agentregistrationfrontend/views/apply/aboutyourbusiness/TypeOfSignInPage.scala.html
+++ b/app/uk/gov/hmrc/agentregistrationfrontend/views/apply/aboutyourbusiness/TypeOfSignInPage.scala.html
@@ -27,8 +27,7 @@
 )
 
 @(
-        form: Form[TypeOfSignIn]
-)(implicit
+        form: Form[TypeOfSignIn])(implicit
         request: RequestHeader,
         messages: Messages
 )
