--- a/app/uk/gov/hmrc/agentregistrationfrontend/views/apply/agentdetails/AgentBusinessNamePage.scala.html
+++ b/app/uk/gov/hmrc/agentregistrationfrontend/views/apply/agentdetails/AgentBusinessNamePage.scala.html
@@ -33,8 +33,10 @@
 
 @(
         form: Form[AgentBusinessName],
-        bprBusinessName: Option[String]
-)(implicit request: AgentApplicationRequest[?], messages: Messages)
+        bprBusinessName: Option[String])(implicit
+        request: RequestHeader,
+        messages: Messages
+)
 
 @key = @{
     AgentBusinessNameForm.key
