--- a/app/uk/gov/hmrc/agentregistrationfrontend/views/apply/agentdetails/CheckYourAnswersPage.scala.html
+++ b/app/uk/gov/hmrc/agentregistrationfrontend/views/apply/agentdetails/CheckYourAnswersPage.scala.html
@@ -17,7 +17,8 @@
 @import uk.gov.hmrc.govukfrontend.views.html.components._
 @import uk.gov.hmrc.agentregistrationfrontend.views.html.Layout
 @import uk.gov.hmrc.agentregistrationfrontend.views.html.apply.agentdetails.AnswerSummary
-@import uk.gov.hmrc.agentregistrationfrontend.action.AgentApplicationRequest
+@import uk.gov.hmrc.agentregistration.shared.AgentApplication
+
 
 @this(
         layout: Layout,
@@ -25,8 +26,8 @@
         answerSummary: AnswerSummary
 )
 
-@(implicit
-        request: AgentApplicationRequest[?],
+@(      agentApplication: AgentApplication)(implicit
+        request: RequestHeader,
         messages: Messages
 )
 
@@ -37,7 +38,7 @@
     messages(s"$key.title")
 }
 @agentDetails = @{
-    request.agentApplication.getAgentDetails
+    agentApplication.getAgentDetails
 }
 
 @layout(pageTitle = title) {
