--- a/app/uk/gov/hmrc/agentregistrationfrontend/views/apply/amls/AmlsEvidenceUploadProgressPage.scala.html
+++ b/app/uk/gov/hmrc/agentregistrationfrontend/views/apply/amls/AmlsEvidenceUploadProgressPage.scala.html
@@ -23,7 +23,11 @@
     govukButton: GovukButton
 )
 
-@(status: UploadStatus)(implicit messages: Messages, request: RequestHeader)
+@(
+        status: UploadStatus)(implicit
+        messages: Messages,
+        request: RequestHeader
+)
 
 
 @pageTitle =  @{status match {
