--- a/app/uk/gov/hmrc/agentregistrationfrontend/views/apply/amls/AmlsExpiryDatePage.scala.html
+++ b/app/uk/gov/hmrc/agentregistrationfrontend/views/apply/amls/AmlsExpiryDatePage.scala.html
@@ -32,8 +32,7 @@
 )
 
 @(
-        form: Form[LocalDate]
-)(implicit
+        form: Form[LocalDate])(implicit
         request: RequestHeader,
         messages: Messages
 )
