--- a/app/uk/gov/hmrc/agentregistrationfrontend/views/apply/amls/AmlsRegistrationNumberPage.scala.html
+++ b/app/uk/gov/hmrc/agentregistrationfrontend/views/apply/amls/AmlsRegistrationNumberPage.scala.html
@@ -29,8 +29,7 @@
 )
 
 @(
-        form: Form[AmlsRegistrationNumber]
-)(implicit
+        form: Form[AmlsRegistrationNumber])(implicit
         request: RequestHeader,
         messages: Messages
 )
