--- a/app/uk/gov/hmrc/agentregistrationfrontend/views/apply/amls/AmlsSupervisoryBodyPage.scala.html
+++ b/app/uk/gov/hmrc/agentregistrationfrontend/views/apply/amls/AmlsSupervisoryBodyPage.scala.html
@@ -34,8 +34,7 @@
 )
 
 @(
-        form: Form[AmlsCode],
-)(implicit
+        form: Form[AmlsCode])(implicit
         request: RequestHeader,
         messages: Messages
 )
