--- a/app/uk/gov/hmrc/agentregistrationfrontend/views/apply/applicantcontactdetails/TelephoneNumberPage.scala.html
+++ b/app/uk/gov/hmrc/agentregistrationfrontend/views/apply/applicantcontactdetails/TelephoneNumberPage.scala.html
@@ -29,7 +29,11 @@
         continueOrSaveForLater: ContinueOrSaveForLater
 )
 
-@(form: Form[TelephoneNumber])(implicit request: AgentApplicationRequest[AnyContent], messages: Messages)
+@(
+        form: Form[TelephoneNumber])(implicit
+        request: RequestHeader,
+        messages: Messages
+)
 
 @key = @{
     TelephoneNumberForm.key
