--- a/app/uk/gov/hmrc/agentregistrationfrontend/views/components/CopyButton.scala.html
+++ b/app/uk/gov/hmrc/agentregistrationfrontend/views/components/CopyButton.scala.html
@@ -22,8 +22,9 @@
         clip: String,
         screenReaderText: Option[String] = None,
         copyContent: Option[String] = None,
-        copiedContent: Option[String] = None
-)(implicit messages: Messages)
+        copiedContent: Option[String] = None)(implicit
+        messages: Messages
+)
 
 <button
     type="button"
