--- a/app/uk/gov/hmrc/agentregistrationfrontend/views/providedetails/individualconfirmation/AnswerSummary.scala.html
+++ b/app/uk/gov/hmrc/agentregistrationfrontend/views/providedetails/individualconfirmation/AnswerSummary.scala.html
@@ -28,8 +28,10 @@
 
 @(
         key: String,
-        individualProvidedDetails: IndividualProvidedDetails
-)(implicit request: Request[?], messages: Messages)
+        individualProvidedDetails: IndividualProvidedDetails)(implicit
+        request: Request[?],
+        messages: Messages
+)
 
 @makeSummaryListRow(labelKey: String, valueText: String, changeHref: String) = @{
     SummaryListRow(
