--- a/app/uk/gov/hmrc/agentregistrationfrontend/views/ErrorTemplate.scala.html
+++ b/app/uk/gov/hmrc/agentregistrationfrontend/views/ErrorTemplate.scala.html
@@ -18,7 +18,13 @@
 
 @this(layout: Layout)
 
-@(pageTitle: String, heading: String, message: String)(implicit request: RequestHeader, messages: Messages)
+@(
+        pageTitle: String,
+        heading: String,
+        message: String)(implicit
+        request: RequestHeader,
+        messages: Messages
+)
 
 @layout(pageTitle = pageTitle) {
     <h1 class="govuk-heading-xl">@{Text(heading).asHtml}</h1>
