--- a/app/uk/gov/hmrc/agentregistrationfrontend/views/apply/aboutyourbusiness/CreateSignInDetailsPage.scala.html
+++ b/app/uk/gov/hmrc/agentregistrationfrontend/views/apply/aboutyourbusiness/CreateSignInDetailsPage.scala.html
@@ -24,7 +24,11 @@
     govukButton: GovukButton
 )
 
-@(signInLink: Uri)(implicit request: Request[?], messages: Messages)
+@(
+        signInLink: Uri)(implicit
+        request: RequestHeader,
+        messages: Messages
+)
 
 @key = @{"createSignInDetails"}
 @title = @{messages(s"$key.title")}
