--- a/app/uk/gov/hmrc/agentregistrationfrontend/views/apply/aboutyourbusiness/Llp/AnswerSummary.scala.html
+++ b/app/uk/gov/hmrc/agentregistrationfrontend/views/apply/aboutyourbusiness/Llp/AnswerSummary.scala.html
@@ -25,8 +25,9 @@
         key: String,
         answers: BusinessDetailsLlp,
         userRole: UserRole,
-        canChange: Boolean = true
-)(implicit messages: Messages)
+        canChange: Boolean = true)(implicit
+        messages: Messages
+)
 
 @agentTypeRow = @{
   SummaryListRow(
