--- a/app/uk/gov/hmrc/agentregistrationfrontend/views/apply/aboutyourbusiness/ScottishPartnership/AnswerSummary.scala.html
+++ b/app/uk/gov/hmrc/agentregistrationfrontend/views/apply/aboutyourbusiness/ScottishPartnership/AnswerSummary.scala.html
@@ -26,8 +26,9 @@
         answers: BusinessDetailsScottishPartnership,
         userRole: UserRole,
         canChange: Boolean = true,
-        entityName: String
-)(implicit messages: Messages)
+        entityName: String)(implicit
+        messages: Messages
+)
 
 @agentTypeRow = @{
   SummaryListRow(
