--- a/app/uk/gov/hmrc/agentregistrationfrontend/views/apply/agentdetails/AgentCorrespondenceAddressPage.scala.html
+++ b/app/uk/gov/hmrc/agentregistrationfrontend/views/apply/agentdetails/AgentCorrespondenceAddressPage.scala.html
@@ -14,7 +14,6 @@
  * limitations under the License.
  *@
 
-@import uk.gov.hmrc.agentregistrationfrontend.action.AgentApplicationRequest
 @import uk.gov.hmrc.agentregistrationfrontend.forms.AgentCorrespondenceAddressForm
 @import uk.gov.hmrc.agentregistrationfrontend.model.AddressOptions
 @import uk.gov.hmrc.agentregistrationfrontend.views.html.Layout
@@ -33,8 +32,10 @@
 
 @(
         form: Form[String],
-        addressOptions: AddressOptions
-)(implicit request: AgentApplicationRequest[?], messages: Messages)
+        addressOptions: AddressOptions)(implicit
+        request: RequestHeader,
+        messages: Messages
+)
 
 @key = @{
     AgentCorrespondenceAddressForm.key
