--- a/app/uk/gov/hmrc/agentregistrationfrontend/views/apply/agentdetails/AgentEmailAddressPage.scala.html
+++ b/app/uk/gov/hmrc/agentregistrationfrontend/views/apply/agentdetails/AgentEmailAddressPage.scala.html
@@ -15,7 +15,7 @@
  *@
 
 @import uk.gov.hmrc.agentregistration.shared.agentdetails.AgentEmailAddress
-@import uk.gov.hmrc.agentregistrationfrontend.action.AgentApplicationRequest
+@import uk.gov.hmrc.agentregistration.shared.AgentApplication
 @import uk.gov.hmrc.agentregistrationfrontend.forms.AgentEmailAddressForm
 @import uk.gov.hmrc.agentregistrationfrontend.views.html.Layout
 @import uk.gov.hmrc.agentregistrationfrontend.views.html.apply.partials.ContinueOrSaveForLater
@@ -33,8 +33,11 @@
 
 @(
         form: Form[AgentEmailAddress],
-        bprEmailAddress: Option[String]
-)(implicit request: AgentApplicationRequest[?], messages: Messages)
+        bprEmailAddress: Option[String],
+        agentApplication: AgentApplication)(implicit
+        request: RequestHeader,
+        messages: Messages
+)
 
 @key = @{
     AgentEmailAddressForm.key
@@ -43,8 +46,7 @@
     AgentEmailAddressForm.otherKey
 }
 @contactEmail = @{
-    request
-    .agentApplication
+    agentApplication
     .getApplicantContactDetails
     .getVerifiedEmail
 }
