--- a/app/uk/gov/hmrc/agentregistrationfrontend/views/apply/amls/AmlsEvidenceUploadPage.scala.html
+++ b/app/uk/gov/hmrc/agentregistrationfrontend/views/apply/amls/AmlsEvidenceUploadPage.scala.html
@@ -21,7 +21,6 @@
 @import uk.gov.hmrc.agentregistrationfrontend.views.html._
 @import uk.gov.hmrc.agentregistrationfrontend.views.html.Layout
 @import views.html.helper.CSPNonce
-@import java.net.URI
 
 @this(
         layout: Layout,
@@ -34,8 +33,10 @@
 
 @(
         upscanInitiateResponse: UpscanInitiateResponse,
-        supervisoryBodyName: AmlsName
-)(implicit request: Request[?], messages: Messages)
+        supervisoryBodyName: AmlsName)(implicit
+        request: RequestHeader,
+        messages: Messages
+)
 
 @key = @{"amlsEvidenceUpload"}
 @title = @{messages(s"$key.title")}
