--- a/app/uk/gov/hmrc/agentregistrationfrontend/views/apply/checkfailed/CanNotRegisterPage.scala.html
+++ b/app/uk/gov/hmrc/agentregistrationfrontend/views/apply/checkfailed/CanNotRegisterPage.scala.html
@@ -24,7 +24,8 @@
         govukButton: GovukButton
 )
 
-@(entityName: String)(implicit
+@(
+        entityName: String)(implicit
         request: RequestHeader,
         messages: Messages
 )
