--- a/app/uk/gov/hmrc/agentregistrationfrontend/views/apply/listdetails/NumberOfKeyIndividualsPage.scala.html
+++ b/app/uk/gov/hmrc/agentregistrationfrontend/views/apply/listdetails/NumberOfKeyIndividualsPage.scala.html
@@ -19,7 +19,6 @@
 @import uk.gov.hmrc.agentregistration.shared.AgentApplicationLlp
 @import uk.gov.hmrc.agentregistration.shared.AgentApplicationSoleTrader
 @import uk.gov.hmrc.agentregistration.shared.lists.NumberOfRequiredKeyIndividuals
-@import uk.gov.hmrc.agentregistrationfrontend.action.AgentApplicationRequest
 @import uk.gov.hmrc.agentregistrationfrontend.forms.NumberOfKeyIndividualsForm
 @import uk.gov.hmrc.agentregistrationfrontend.forms.NumberOfKeyIndividualsForm.HowManyIndividualsOption
 @import uk.gov.hmrc.agentregistrationfrontend.forms.NumberOfKeyIndividualsForm.HowManyIndividualsOption.*
@@ -39,8 +38,12 @@
 
 @(
         form: Form[NumberOfRequiredKeyIndividuals],
-        entityName: String
-)(implicit request: AgentApplicationRequest[?], messages: Messages)
+        entityName: String,
+        agentApplication: AgentApplication
+        )(implicit
+        request: RequestHeader,
+        messages: Messages
+)
 
 @key = @{NumberOfKeyIndividualsForm.howManyIndividualsOption}
 @exactNumberOfOfficialsKey = @{NumberOfKeyIndividualsForm.howManyIndividuals}
@@ -66,7 +69,7 @@
 ).withFormField(form(numberOfOfficialsWhoDealWithTaxKey)))
 }
 @businessTypeKey = @{
-    request.agentApplication match {
+    agentApplication match {
         case _: AgentApplicationLlp => "LimitedLiabilityPartnership"
         case _: AgentApplicationLimitedCompany => "LimitedCompany"
         case _: AgentApplicationSoleTrader => "SoleTrader"
