APB-10575 further cleanup for individuals
Signed-off-by: pav <173694350+paweldigital@users.noreply.github.com>

--- a/app/uk/gov/hmrc/agentregistrationfrontend/views/providedetails/CompaniesHouseNameQueryPage.scala.html
+++ b/app/uk/gov/hmrc/agentregistrationfrontend/views/providedetails/CompaniesHouseNameQueryPage.scala.html
@@ -16,9 +16,7 @@
 
 @import uk.gov.hmrc.agentregistration.shared.companieshouse.CompaniesHouseNameQuery
 @import uk.gov.hmrc.agentregistrationfrontend.forms.CompaniesHouseNameQueryForm
-@import uk.gov.hmrc.agentregistrationfrontend.controllers.providedetails.routes
 @import uk.gov.hmrc.agentregistrationfrontend.views.html.Layout
-@import uk.gov.hmrc.agentregistrationfrontend.views.html.apply.partials.ContinueOrSaveForLater
 @import uk.gov.hmrc.govukfrontend.views.html.components.implicits.RichInput
 
 @this(
@@ -28,7 +26,12 @@
         govukButton: GovukButton
 )
 
-@(form: Form[CompaniesHouseNameQuery], companyName: String)(implicit request: Request[?], messages: Messages)
+@(
+        form: Form[CompaniesHouseNameQuery],
+        companyName: String)(implicit
+        request: RequestHeader,
+        messages: Messages
+)
 
 @key = @{
     "companiesHouseNameQuery"
