--- a/app/uk/gov/hmrc/agentregistrationfrontend/views/providedetails/individualconfirmation/AnswerSummary.scala.html
+++ b/app/uk/gov/hmrc/agentregistrationfrontend/views/providedetails/individualconfirmation/AnswerSummary.scala.html
@@ -29,7 +29,7 @@
 @(
         key: String,
         individualProvidedDetails: IndividualProvidedDetails)(implicit
-        request: Request[?],
+        request: RequestHeader,
         messages: Messages
 )
 
