--- a/app/uk/gov/hmrc/agentregistrationfrontend/views/providedetails/individualconfirmation/IndividualDateOfBirthPage.scala.html
+++ b/app/uk/gov/hmrc/agentregistrationfrontend/views/providedetails/individualconfirmation/IndividualDateOfBirthPage.scala.html
@@ -28,8 +28,7 @@
 )
 
 @(
-        form: Form[UserProvidedDateOfBirth]
-)(implicit
+        form: Form[UserProvidedDateOfBirth])(implicit
         request: RequestHeader,
         messages: Messages
 )
