--- a/app/uk/gov/hmrc/agentregistrationfrontend/views/providedetails/individualconfirmation/IndividualEmailAddressPage.scala.html
+++ b/app/uk/gov/hmrc/agentregistrationfrontend/views/providedetails/individualconfirmation/IndividualEmailAddressPage.scala.html
@@ -18,7 +18,6 @@
 @import uk.gov.hmrc.agentregistrationfrontend.views.html.Layout
 @import uk.gov.hmrc.govukfrontend.views.html.components.implicits.RichInput
 @import uk.gov.hmrc.agentregistrationfrontend.forms.IndividualEmailAddressForm
-@import uk.gov.hmrc.agentregistrationfrontend.action.providedetails.llp.IndividualProvideDetailsRequest
 @import uk.gov.hmrc.agentregistrationfrontend.views.html.providedetails.partials.SaveAndContinue
 
 @this(
@@ -29,7 +28,11 @@
         saveAndContinue: SaveAndContinue
 )
 
-@(form: Form[EmailAddress])(implicit request: IndividualProvideDetailsRequest[AnyContent], messages: Messages)
+@(
+        form: Form[EmailAddress])(implicit
+        request: RequestHeader,
+        messages: Messages
+)
 
 @key = @{
     IndividualEmailAddressForm.key
