--- a/app/uk/gov/hmrc/agentregistrationfrontend/views/providedetails/individualconfirmation/IndividualEmailLockedPage.scala.html
+++ b/app/uk/gov/hmrc/agentregistrationfrontend/views/providedetails/individualconfirmation/IndividualEmailLockedPage.scala.html
@@ -22,7 +22,10 @@
         govukInput: GovukInput
 )
 
-@()(implicit request: IndividualProvideDetailsRequest[AnyContent], messages: Messages)
+@()(
+        implicit request: RequestHeader,
+        messages: Messages
+)
 
 @key = @{
     "individualEmailLocked"
