--- a/app/uk/gov/hmrc/agentregistrationfrontend/views/providedetails/individualconfirmation/IndividualNinoPage.scala.html
+++ b/app/uk/gov/hmrc/agentregistrationfrontend/views/providedetails/individualconfirmation/IndividualNinoPage.scala.html
@@ -33,8 +33,10 @@
 )
 
 @(
-        form: Form[UserProvidedNino]
-)(implicit request: IndividualProvideDetailsRequest[?], messages: Messages)
+        form: Form[UserProvidedNino])(implicit
+        request: RequestHeader,
+        messages: Messages
+)
 
 @key = @{
     IndividualNinoForm.hasNinoKey
