--- a/app/uk/gov/hmrc/agentregistrationfrontend/views/providedetails/individualconfirmation/IndividualSaUtrPage.scala.html
+++ b/app/uk/gov/hmrc/agentregistrationfrontend/views/providedetails/individualconfirmation/IndividualSaUtrPage.scala.html
@@ -34,8 +34,10 @@
 )
 
 @(
-        form: Form[UserProvidedSaUtr]
-)(implicit request: IndividualProvideDetailsRequest[?], messages: Messages)
+        form: Form[UserProvidedSaUtr])(implicit
+        request: RequestHeader,
+        messages: Messages
+)
 
 @key = @{
     IndividualSaUtrForm.hasSaUtrKey
