--- a/app/uk/gov/hmrc/agentregistrationfrontend/views/providedetails/individualconfirmation/IndividualTelephoneNumberPage.scala.html
+++ b/app/uk/gov/hmrc/agentregistrationfrontend/views/providedetails/individualconfirmation/IndividualTelephoneNumberPage.scala.html
@@ -29,7 +29,11 @@
         saveAndContinue: SaveAndContinue
 )
 
-@(form: Form[TelephoneNumber])(implicit request: IndividualProvideDetailsRequest[AnyContent], messages: Messages)
+@(
+        form: Form[TelephoneNumber])(implicit
+        request: RequestHeader,
+        messages: Messages
+)
 
 @key = @{
     IndividualTelephoneNumberForm.key
