--- a/app/uk/gov/hmrc/agentregistrationfrontend/views/apply/aboutyourbusiness/UserRolePage.scala.html
+++ b/app/uk/gov/hmrc/agentregistrationfrontend/views/apply/aboutyourbusiness/UserRolePage.scala.html
@@ -28,8 +28,10 @@
 
 @(
         form: Form[UserRole],
-        userRoleOption: UserRole
-)(implicit request: RequestHeader, messages: Messages)
+        userRoleOption: UserRole)(implicit
+        request: RequestHeader,
+        messages: Messages
+)
 
 @key = @{
     UserRoleForm.key
