--- a/app/uk/gov/hmrc/agentregistrationfrontend/views/providedetails/LlpStartPage.scala.html
+++ b/app/uk/gov/hmrc/agentregistrationfrontend/views/providedetails/LlpStartPage.scala.html
@@ -14,7 +14,6 @@
  * limitations under the License.
  *@
 
-@import uk.gov.hmrc.agentregistration.shared.AgentApplication
 @import uk.gov.hmrc.agentregistration.shared.AgentApplicationLlp
 @import uk.gov.hmrc.agentregistrationfrontend.views.html.Layout
 
@@ -24,8 +23,7 @@
 )
 
 @(
-        agentApplication: AgentApplicationLlp
-)(implicit
+        agentApplication: AgentApplicationLlp)(implicit
         request: RequestHeader,
         messages: Messages
 )
