--- a/app/uk/gov/hmrc/agentregistrationfrontend/views/providedetails/MatchedIndividualPage.scala.html
+++ b/app/uk/gov/hmrc/agentregistrationfrontend/views/providedetails/MatchedIndividualPage.scala.html
@@ -14,13 +14,11 @@
  * limitations under the License.
  *@
 
-@import uk.gov.hmrc.agentregistrationfrontend.action.providedetails.llp.IndividualProvideDetailsRequest
 @import uk.gov.hmrc.agentregistrationfrontend.views.html.Layout
 @import uk.gov.hmrc.govukfrontend.views.html.components.implicits.RichRadios
 @import uk.gov.hmrc.agentregistrationfrontend.forms.YesNo
 @import uk.gov.hmrc.agentregistrationfrontend.forms.ChOfficerSelectionFormType
 @import uk.gov.hmrc.agentregistrationfrontend.forms.ChOfficerSelectionForms
-@import uk.gov.hmrc.agentregistrationfrontend.forms.ChOfficerSelectionForms.toOfficerSelection
 @import uk.gov.hmrc.agentregistration.shared.companieshouse.CompaniesHouseDateOfBirth
 @import uk.gov.hmrc.agentregistration.shared.companieshouse.CompaniesHouseOfficer
 
@@ -35,8 +33,10 @@
 
 @(
         form: Form[YesNo],
-        officer: CompaniesHouseOfficer
-)(implicit request: Request[?], messages: Messages)
+        officer: CompaniesHouseOfficer)(implicit
+        request: RequestHeader,
+        messages: Messages
+)
 
 @key: String = @{ChOfficerSelectionForms.key}
 
