--- a/app/uk/gov/hmrc/agentregistrationfrontend/views/providedetails/individualconfirmation/IndividualApproveApplicationPage.scala.html
+++ b/app/uk/gov/hmrc/agentregistrationfrontend/views/providedetails/individualconfirmation/IndividualApproveApplicationPage.scala.html
@@ -14,7 +14,7 @@
  * limitations under the License.
  *@
 
-@import uk.gov.hmrc.agentregistrationfrontend.action.providedetails.llp.IndividualProvideDetailsRequest
+@import uk.gov.hmrc.agentregistration.shared.llp.IndividualProvidedDetails
 @import uk.gov.hmrc.agentregistrationfrontend.views.html.Layout
 @import uk.gov.hmrc.agentregistrationfrontend.views.html.providedetails.partials.SaveAndContinue
 @import uk.gov.hmrc.govukfrontend.views.html.components.implicits.RichRadios
@@ -34,8 +34,10 @@
 @(
         form: Form[YesNo],
         officerName: String,
-        companyName: String
-)(implicit request: IndividualProvideDetailsRequest[?], messages: Messages)
+        companyName: String)(implicit
+        request: RequestHeader,
+        messages: Messages
+)
 
 @key: String = @{IndividualApproveApplicationForm.key}
 
